# 3D-object-handling

./: 3D_object_handling_application.py  CNN_OD_constants.py  CNN_OD_detect_objects.py  CNN_OD_prepare_dataset_and_models.ipynb  CNN_OD_xml_to_txt.py  Colab_CNN_OD_train_model.ipynb  LINUX_3D_OBJECT_HANDLING_APPLICATION.sh  LINUX_INSTALLING_PACKAGES.sh  README.md  RS_and_3D_OD_common_classes.py  RS_and_3D_OD_common_functions.py  RS_and_3D_OD_common_programs.py  RS_and_3D_OD_constants.py  RS_and_3D_OD_pointcloud_functions.py  RS_and_3D_OD_pointcloud_programs.py  RS_and_3D_OD_prototypes.ipynb  WINDOWS_3D_OBJECT_HANDLING_APPLICATION.bat  WINDOWS_INSTALLING_PACKAGES.bat  hand_eye_rotation_vector.txt  hand_eye_translation_vector.txt
MISCELLANEOUS/: compiling and building projects for C++.txt  installing packages for Python.txt  programming notes for C++.txt
MISCELLANEOUS/C++_vision_project_template/: CMakeLists.txt  build_project.py  main.cpp
MISCELLANEOUS/Robotiq Gripper UCG-1.8.8 installation/: UCG-1.8.8_release_notes.txt
MISCELLANEOUS/SolidWorks models/: camera holder (M3x12, M4x10).SLDPRT  camera holder (M3x12, M4x10).STL  tool flange (M5x10, M6x10).SLDPRT  tool flange (M5x10, M6x10).STL
MISCELLANEOUS/Universal Robot programs/: Levanic.installation  Levanic.variables  Levanic_reconstruction_communication.script  Levanic_reconstruction_communication.txt  Levanic_reconstruction_communication.urp  default.variables
calibration data/camera rotation vectors/: 05-01-2022_15-58-15-UZ_camera_rotation_vector.txt  05-01-2022_15-59-02-EE_camera_rotation_vector.txt  (+2 more)
(+4951 files in other folders)
